z-index fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,7 +30,7 @@ p {
 }
 
 w3m-core-button {
-    z-index: 999;
+    z-index: 9999;
 }
 
 @layer base {
